[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enemy_ship.png" type="Texture" id=1]
[ext_resource path="res://Player/Explosion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Enemy/EnemyBullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/EnemyPaths.tscn" type="PackedScene" id=5]
[ext_resource path="res://Pickups/ExtraLife.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]

[node name="Enemy" type="Area2D" groups=[
"enemies",
]]
script = ExtResource( 3 )
Bullet = ExtResource( 4 )
ExtraLife = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Explosion" parent="." instance=ExtResource( 2 )]

[node name="GunTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="EnemyPaths" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]

[editable path="Explosion"]
